Table [FIX] Fixes double border on thead

--- a/scss/core/elements/_table.scss
+++ b/scss/core/elements/_table.scss
@@ -16,13 +16,17 @@
 			width: 100%;
 		}
 
+		> .thead > .tr:not(:first-child) > .th, > .tbody > .tr:not(:first-child) > .td,
+		> thead > tr:not(:first-child) > th, > tbody > tr:not(:first-child) > td {
+			border-top: map-gets($vars, border);
+		}
+
 		> .thead > .tr > .th, > .tbody > .tr > .td,
 		> thead > tr > th, > tbody > tr > td {
 			display: table-cell;
 			float: none;
 			vertical-align: top;
 			padding: map-gets($vars, padding);
-			border-top: map-gets($vars, border);
 		}
 
 		// thead
